src/test/ui/parser/keyword-if-as-identifier.stderr
error: expected identifier, found keyword `if`
  --> $DIR/keyword-if-as-identifier.rs:4:9
   |
LL |     let if = "foo";
   |         ^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#if = "foo";
   |         ^^^^

error: aborting due to previous error

